implement dabatase connection file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 gateway.api/node_modules/
 macapa.api/node_modules/
 varejao.api/node_modules/
+
+gateway.api/.env/
+macapa.api/.env/
+varejao.api/.env/
