--- a/gateway.api/package.json
+++ b/gateway.api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/dotenv-safe": "^8.1.2",
     "@types/express": "^4.17.13",
     "@types/express-http-proxy": "^1.6.3",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.3",
