--- a/gateway.api/package.json
+++ b/gateway.api/package.json
@@ -11,25 +11,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv-save": "^1.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/dotenv-safe": "^8.1.2",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
     "@types/express-http-proxy": "^1.6.3",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "babel-jest": "^27.3.1",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
