add depends_on mongo to mongo-seed service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build: 
       context: ./gateway.api/db-seed
       dockerfile: Dockerfile
+    depends_on:
+      - mongo
 
   gateway.api:
     image: gateway.api
