--- a/macapa.api/package.json
+++ b/macapa.api/package.json
@@ -14,6 +14,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/mysql": "^2.15.19",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.3"
   }
 }
