--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   mongo:
     image: mongo
@@ -36,17 +36,41 @@ services:
       - mongo
     restart: always
   
+  mysql:
+    image: mysql
+    container_name: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    expose:
+      - "3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=macapadb
+    ports:
+      - 3306:3306
+    volumes:
+      - ./macapa.api/db:/docker-entrypoint-initdb.d/:ro
+    depends_on:
+      - gateway.api
   macapa.api:
     image: macapa.api
     build:
       context: ./macapa.api
       dockerfile: Dockerfile
+    command: bash -c 'while !</dev/tcp/mysql/3306; do sleep 1; done; npm install; npm start'
     container_name: macapa.api
     volumes:
       - ./tmp/npm:/root/.npm:z
       - ./macapa.api/src:/usr/src/app/src:z
     ports:
       - "6001:6001"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_ROOT_PASSWORD=123456
+      - DBHOST=mysql
+      - DBPORT=3306
+      - MYSQL_DATABASE=macapadb
+      - CONNECT_TIMEOUT=60000
     depends_on:
-      - gateway.api
+      - mysql
     restart: always
