--- a/macapa.api/package.json
+++ b/macapa.api/package.json
@@ -14,7 +14,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "@types/mysql": "^2.15.19",
+    "@types/node": "^16.11.11",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3"
