--- a/varejao.api/Dockerfile
+++ b/varejao.api/Dockerfile
@@ -1,15 +1,10 @@
-FROM node:14 as base
+FROM node:16
 
-WORKDIR /home/node/app
-
+WORKDIR /usr/src/app
 COPY package*.json ./
 
-RUN npm install
+EXPOSE 6001
 
-COPY . .
-
-FROM base as production
-
-ENV NODE_PATH=./build
-
-RUN npm run build
+CMD npm config set cache-min 9999999 \
+    && npm install \
+    && npm start
