--- a/varejao.api/docker-compose.yml
+++ b/varejao.api/docker-compose.yml
@@ -1,17 +1,26 @@
-version: '3.7'
-
+version: '3'
 services:
-  ts-node-docker:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: base
-    volumes:
-      - ./src:/home/node/app/src
-      - ./nodemon.json:/home/node/app/nodemon.json
-    container_name: ts-node-docker
-    expose:
-      - '4000'
+  postgres:
+    image: postgres
+    hostname: postgres
     ports:
-      - '4000:4000'
-    command: npm run dev
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: varejaodb
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+  pgadmin:
+    image: dpage/pgadmin4
+    depends_on:
+      - postgres
+    ports:
+      - "5555:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+      restart: unless-stopped
+volumes:
+  postgres-data:
