--- a/varejao.api/package.json
+++ b/varejao.api/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "varejao.api",
+  "name": "gateway-test-one",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=./build node build/index.js",
-    "build": "tsc -p .",
-    "dev": "nodemon src/index.ts"
+    "start": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.10",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "@types/node": "^16.11.11",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
   }
 }
