--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3.8'
 services:
+  # --------- GATEWAY.API --------- 
   mongo:
     image: mongo
     container_name: mongo
@@ -35,7 +36,9 @@ services:
     depends_on:
       - mongo
     restart: always
-  
+  # --------- GATEWAY.API ---------
+
+  # --------- MACAPA.API ---------
   mysql:
     image: mysql
     container_name: mysql
@@ -74,3 +77,55 @@ services:
     depends_on:
       - mysql
     restart: always
+  # --------- MACAPA.API ---------
+
+  # --------- VAREJAO.API ---------
+  postgres:
+    image: postgres
+    hostname: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: varejaodb
+    volumes:
+      # - postgres-data:/var/lib/postgresql/data
+      - ./varejao.api/db:/docker-entrypoint-initdb.d/:ro
+      - ./tmp/postgres:/var/lib/postgresql/data:rw
+    restart: unless-stopped
+    depends_on:
+      - gateway.api
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "5555:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+      restart: unless-stopped
+    depends_on:
+      - postgres
+
+  varejao.api:
+    image: varejao.api
+    build:
+      context: ./varejao.api
+      dockerfile: Dockerfile
+    # command: bash -c 'while !</dev/tcp/mysql/3306; do sleep 1; done; npm install; npm start'
+    container_name: varejao.api
+    volumes:
+      - ./tmp/npm:/root/.npm:z
+      - ./varejao.api/src:/usr/src/app/src:z
+    ports:
+      - "6002:6002"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - DBHOST=postgres
+      - DBPORT=5432
+      - POSTGRES_DATABASE=varejaodb
+    depends_on:
+      - postgres
+    restart: always
+  # --------- VAREJAO.API ---------
